# CNN-for-inverse-problems-in-wave-dynamics

./: README.md  encoder_dataset.py  encoder_dataset_generation.py  grid_generation.py  heterogeneity_detection_demo.ipynb  models.py  unet_encoder_demo.ipynb
Galerkin/: CMakeLists.txt  add_newlines.sh  build_debug.sh  build_release.sh
Galerkin/.docs/: novosib.txt  руководство пользователя рт кластером.docx
Galerkin/.vc2015project/: Volume.sln
Galerkin/.vc2015project/MeshBuilder/: MeshBuilder.vcxproj  MeshBuilder.vcxproj.filters
Galerkin/.vc2015project/Metis/: Metis.vcxproj  Metis.vcxproj.filters
Galerkin/.vc2015project/ResultCombiner/: ResultCombiner.vcxproj  ResultCombiner.vcxproj.filters
Galerkin/.vc2015project/Task/: Task.vcxproj  Task.vcxproj.filters
Galerkin/release/: CMakeCache.txt  Makefile  cmake_install.cmake
Galerkin/release/src/Task/MeshBuilder/: Makefile  cmake_install.cmake
Galerkin/release/src/Task/ResultCombiner/: Makefile  cmake_install.cmake
Galerkin/release/src/Task/Task/: Makefile  cmake_install.cmake
Galerkin/src/DifferentialSolvers/: DifferentialSolver.h  DifferentialSystem.h  ParticleSystem.h  SolverState.h  SolversFactory.h
Galerkin/src/DifferentialSolvers/Solvers/: AdaptiveRKSolver.h  DormandPrinceSolver.h  EulerSolver.h  RK2Solver.h  RungeSolver12_14.h  RungeSolver4.h  RungeSolver8_10.h  TrapezoidSolver.h
Galerkin/src/GcMethod/: ContactCorrectors.h  ContactGcCalculator3D.h  ContactGcCalculator3D.inl  GcIterators.h  GcMesh.h  GcMethod.7z  Interpolator.h
Galerkin/src/GcMethod/ExternalInterpolator/: interpolation.h  interpolationHeader.h  interpolationHeader_.h  interpolationHeader__.h  interpolation_.h  interpolation__.h  test3D.h
Galerkin/src/IO/Segy/: SegySeismo.h  SegySeismo.inl
Galerkin/src/IO/Vtk/: BasicVtkWriter.h  CellInfoVtkWriter.h  CellInfoVtkWriter.inl  ContactVtkWriter.h  ContactVtkWriter.inl  MeshVtkWriter.h  SnapshotVtkWriter.h  VtkReader.h
Galerkin/src/Maths/: AABB2.h  AABB3.h  Collisions.h  Coordinates2.h  Coordinates3.h  Matrix2x2.h  Matrix3x3.h  MatrixInv.h  MatrixMaths.h  Polynomial.h  QuadraturePrecomputer.h  Random.h  Spaces.h  Tensor2.h  Tensor3.h  Util.h  Vector2.h  Vector3.h  VectorMaths.h  test.txt  timer.h
Galerkin/src/Network/: NetworkInterface.cpp  NetworkInterface.h
Galerkin/src/NonlinearSolvers/: NonlinearFunctionSystem.h  NonlinearSystemSolver.h
Galerkin/src/NonlinearSolvers/Solvers/: KrylovProjector.h  SimpleIterations.h
Galerkin/src/Task/ElasticSystem/: BoundaryInfos.h  ContactInfos.h  ElasticSystem.h  ElasticSystem.inl  ElasticSystemCommon.h  ElasticSystemCommon.inl  IniStates.h  PointSources.h  SourceFunctors.h  VectorFunctors.h
Galerkin/src/Task/ElasticVolumeMesh/Distributed/: DistributedElasticVolumeMesh.h  DistributedElasticVolumeMesh2.inl  DistributedElasticVolumeMesh3.inl  DistributedElasticVolumeMeshCommon.h  DistributedElasticVolumeMeshCommon.inl
Galerkin/src/Task/ElasticVolumeMesh/Local/: ElasticVolumeMesh.h  ElasticVolumeMesh2.inl  ElasticVolumeMesh3.inl  ElasticVolumeMeshCommon.inl
Galerkin/src/Task/GeomMesh/: AABBTree.h  BucketStorage.h  DisjointSetBuilder.h  NodeGroupManager.h  TimeHierarchyLevelsManager.h  TopologyReconstructor.h
Galerkin/src/Task/GeomMesh/GeomMesh/: AdditionalCellInfo.h  GeomMesh.h  GeomMesh2.inl  GeomMesh3.inl  GeomMeshBase.h  GeomMeshBase.inl  GeomMeshCommon.h  GeomMeshCommon.inl
Galerkin/src/Task/GeomMesh/MeshIO/Distributed/: DistributedMeshIO.h  DistributedMeshIO.inl  DistributedMeshIO3.inl  TransitionInfo.h
Galerkin/src/Task/GeomMesh/MeshIO/Local/: MeshIO.h  MeshIO.inl  MeshIO2.inl  MeshIO3.inl  MeshIOBase.h
Galerkin/src/Task/MeshBuilder/: CMakeLists.txt  MeshBuilder.cpp  MeshChecker.h  MeshDistributor.h
Galerkin/src/Task/MeshBuilder/MeshSplitter/: MeshSplitter.h  MeshSplitter2.inl  MeshSplitter3.inl  MeshSplitterCommon.h  MeshSplitterCommon.inl
Galerkin/src/Task/MeshBuilder/SpecificMeshBuilders/: BasicMeshBuilder.h  SalomeMeshBuilder.h  SpecificMeshBuilders.h  UnstructuredMeshBuilder.h
Galerkin/src/Task/ResultCombiner/: CMakeLists.txt  ResultCombiner.cpp  SampleIO.h
Galerkin/src/Task/Task/: CMakeLists.txt  Task.cpp  Task.h
Galerkin/src/Task/Task/SettingsParser/: MeshBuilderSettingsParser.h  MeshSettingsParser.h  ParserUtil.h  ResultCombinerSettingsParser.h  ScheduleSettingsParser.h  SettingsParser.h  SnapshotSettingsParser.h  SolverSettingsParser.h  TaskSettingsParser.h
Galerkin/src/Task/VolumeMethod/: Cell.h
Galerkin/src/Task/VolumeMethod/FunctionGetters/: BoundaryFunctionGetter.h  ContactFinder.h  FunctionGetters.h  GhostFunctionGetter.h  SourceFunctionGetter.h
Galerkin/src/Task/VolumeMethod/Spaces/: BaseSpace.h  Decomposer.h  DubinerPrecomputer.h  DubinerSpace.h  FourierSpace2.h  LagrangeSpace.h  PolynomialPrecomputer.h  PolynomialSpace.h
Galerkin/src/Task/VolumeMethod/VolumeMesh/: VolumeMesh.h  VolumeMesh2.inl  VolumeMesh3.inl  VolumeMeshCommon.inl
Galerkin/src/Utils/: Base64.h  Utils.h
salome/: bone.py  heterogeneity.py
